Fixed window bugs (no updateSize if not visible and not before added to map) fixed minor shield bug

--- a/less/featurepopup.less
+++ b/less/featurepopup.less
@@ -7,6 +7,8 @@
 
   .g4u-featurepopup {
     .g4u-window {
+      position: static;
+
       h3.g4u-featurepopup-feature-name {
         text-transform: uppercase;
       }
