--- a/less/window.less
+++ b/less/window.less
@@ -11,7 +11,7 @@
       overflow-y: auto;
     }
 
-    position: relative;
+    position: absolute;
     box-sizing: border-box;
     width: 100%;
     height: 100%;
